# UAVorigin

./: .gitattributes  .gitignore
reacquisition_ws/: .gitignore  README.md
reacquisition_ws/docs/: README.md  gazebo_first_ring_collection.md  px4_rectangle_first_ring_collection.md
reacquisition_ws/src/: README.md
reacquisition_ws/src/reacquisition_first_ring_bringup/: README.md
reacquisition_ws/src/reacquisition_first_ring_core/: README.md
reacquisition_ws/src/reacquisition_first_ring_evaluation/: README.md
reacquisition_ws/src/reacquisition_first_ring_raw/: package.xml  setup.cfg  setup.py
reacquisition_ws/src/reacquisition_first_ring_raw/reacquisition_first_ring_raw/: __init__.py  jsonl_writer.py  mock_sources.py  (+3 more)
reacquisition_ws/src/reacquisition_first_ring_ros/: README.md  package.xml  raw_frame_publisher_node.py  setup.cfg  setup.py  target_observation_frame_node.py
reacquisition_ws/src/reacquisition_first_ring_ros/launch/: raw_frame_publisher.launch.py
reacquisition_ws/src/reacquisition_first_ring_ros/tests/: test_raw_frame_publisher_node.py
reacquisition_ws/src/reacquisition_first_ring_sim/: README.md  gazebo_state_publisher_node.py  package.xml  raw_frame_jsonl_recorder_node.py  setup.cfg  setup.py
reacquisition_ws/src/reacquisition_first_ring_sim/launch/: first_ring_gz_collect.launch.py  first_ring_px4_collect.launch.py
reacquisition_ws/src/reacquisition_first_ring_sim/missions/: px4_rectangle_10m_qgc.plan
reacquisition_ws/src/reacquisition_first_ring_sim/tests/: test_sim_helpers.py
reacquisition_ws/src/reacquisition_first_ring_sim/worlds/: first_ring_flat_world.sdf  first_ring_px4_target_world.sdf
reacquisition_ws/src/reacquisition_interfaces/: README.md
reacquisition_ws/tasks/: README.md  U01.md
reacquisition_ws/tools/: README.md  generate_mock_raw_frames.py  verify_raw_minimal.ps1
(+6 files in other folders)
