<?xml version="1.0"?>
<package format="3">
  <name>reacquisition_first_ring_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 adapter nodes for first-ring raw frame publishing.</description>
  <maintainer email="dev@example.invalid">reacquisition-ws</maintainer>
  <license>Proprietary</license>

  <depend>reacquisition_first_ring_raw</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
