<?xml version="1.0"?>
<package format="3">
  <name>reacquisition_first_ring_sim</name>
  <version>0.1.0</version>
  <description>Minimal Gazebo scene and launch tools for first-ring raw frame collection.</description>
  <maintainer email="dev@example.invalid">reacquisition-ws</maintainer>
  <license>Proprietary</license>

  <exec_depend>reacquisition_first_ring_raw</exec_depend>
  <exec_depend>reacquisition_first_ring_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
